# image-gen

./: 404.html  README.md  bibliografía.txt  dashboard.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
api/diffusion/: index.html
api/generative_model/: index.html
api/metrics/: index.html
api/noise/: index.html
api/samplers/: index.html
assets/: styles.css
dashboard/locales/: cn.json  en.json  es.json
docs/: diffusion.md  index.md  metrics.md  noise.md  others.md  samplers.md
docs/api/: generative_model.md
docs/examples/: basic_usage.md  colorization.md  conditional_generation.md  imputation.md
examples/: benchmark.py  class_conditioning.ipynb  colorization.ipynb  demo1 copy.ipynb  demo1.ipynb  demo2 (euler).ipynb  demo2 (exp).ipynb  demo2 (ode).ipynb  demo2 (pc).ipynb  demo2 (vp).ipynb  demo2.ipynb  demo3.ipynb  demo4.ipynb  diffusers.ipynb  evaluation copy.ipynb  evaluation.ipynb  getting_started.ipynb  imputation.ipynb  noise_schedulers.ipynb  results.csv  samplers.ipynb  test.ipynb  visualization.ipynb
examples/basic_usage/: index.html
examples/colorization/: index.html
examples/conditional_generation/: index.html
examples/dev_tests/: demo1.ipynb  demo2 (euler).ipynb  demo2 (exp).ipynb  demo2 (ode).ipynb  demo2 (pc).ipynb  demo2 (vp).ipynb  demo3.ipynb  demo4.ipynb  (+4 more)
image_gen/: __init__.py  base.py  score_model.py  utils.py  visualization.py  viualization.py
search/: search_index.json
tests/: context.py  test_base.py  test_diffusion.py  test_integration.py  test_metrics.py  test_noise.py  test_samplers.py
(+56 files in other folders)
